tests/machine/x/c/outer_join.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int id;
  const char *name;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int id;
  int customer_id;
  int total;
} order_t;
typedef struct {
  int len;
  order_t *data;
} order_list_t;
order_list_t create_order_list(int len) {
  order_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(order_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  order_t order;
  customer_t customer;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int _mochi_main() {
  customer_t customers[] = {(customer_t){.id = 1, .name = "Alice"},
                            (customer_t){.id = 2, .name = "Bob"},
                            (customer_t){.id = 3, .name = "Charlie"},
                            (customer_t){.id = 4, .name = "Diana"}};
  int customers_len = sizeof(customers) / sizeof(customers[0]);
  order_t orders[] = {(order_t){.id = 100, .customer_id = 1, .total = 250},
                      (order_t){.id = 101, .customer_id = 2, .total = 125},
                      (order_t){.id = 102, .customer_id = 1, .total = 300},
                      (order_t){.id = 103, .customer_id = 5, .total = 80}};
  int orders_len = sizeof(orders) / sizeof(orders[0]);
  result_item_list_t tmp1 = result_item_list_t_create(
      orders_len * customers_len + orders_len + customers_len);
  int tmp2 = 0;
  int *tmp3 = calloc(orders_len, sizeof(int));
  int *tmp4 = calloc(customers_len, sizeof(int));
  for (int tmp5 = 0; tmp5 < orders_len; tmp5++) {
    order_t o = orders[tmp5];
    for (int tmp6 = 0; tmp6 < customers_len; tmp6++) {
      customer_t c = customers[tmp6];
      if (!(o.customer_id == c.id)) {
        continue;
      }
      tmp3[tmp5] = 1;
      tmp4[tmp6] = 1;
      tmp1.data[tmp2] = (result_item_t){.order = o, .customer = c};
      tmp2++;
    }
  }
  for (int tmp5 = 0; tmp5 < orders_len; tmp5++) {
    if (tmp3[tmp5])
      continue;
    order_t o = orders[tmp5];
    customer_t c = (customer_t){0};
    tmp1.data[tmp2] = (result_item_t){.order = o, .customer = c};
    tmp2++;
  }
  for (int tmp7 = 0; tmp7 < customers_len; tmp7++) {
    if (tmp4[tmp7])
      continue;
    customer_t c = customers[tmp7];
    order_t o = (order_t){0};
    tmp1.data[tmp2] = (result_item_t){.order = o, .customer = c};
    tmp2++;
  }
  free(tmp3);
  free(tmp4);
  tmp1.len = tmp2;
  result_item_list_t result = tmp1;
  printf("--- Outer Join using syntax ---\n");
  for (int tmp8 = 0; tmp8 < result.len; tmp8++) {
    result_item_t row = result.data[tmp8];
    if (memcmp(&row.order, &(order_t){0}, sizeof(order_t)) != 0) {
      if (memcmp(&row.customer, &(customer_t){0}, sizeof(customer_t)) != 0) {
        printf("Order %d by %s - $ %d\n", row.order.id, row.customer.name,
               row.order.total);
      } else {
        printf("Order %d by Unknown - $ %d\n", row.order.id, row.order.total);
      }
    } else {
      printf("Customer %s has no orders\n", row.customer.name);
    }
  }
  return 0;
}
int main() { return _mochi_main(); }
